Add basic input for static app

--- a/static/index.html
+++ b/static/index.html
@@ -5,8 +5,26 @@
     <title>Hello</title>
 </head>
 <body>
-    <p>HELLO</p>
-    <button>click me</button>
-    <script src="index.js"></script>
+<p>HELLO</p>
+<div>
+    <label>
+        Enter books' ids: <input type="text"/>
+    </label>
+</div>
+<hr/>
+<div>
+    <label>
+        Enter your id: <input type="text"/>
+    </label>
+</div>
+<hr/>
+<div>
+    <label>
+        Enter books' price: <input type="text"/> $
+    </label>
+</div>
+<hr/>
+<button>click me</button>
+<script src="index.js"></script>
 </body>
 </html>
